[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5"                     
xxhash-rust = { version = "0.8", features = ["xxh32"] }
tokio = { version = "1.0", features = ["full"] } 
priority-queue = "1.3"             
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"         

[[bench]]
name = "kv_bench"
harness = false
